--- a/fit_tracker/frontend/package.json
+++ b/fit_tracker/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-multi-date-picker": "^4.0.0",
     "react-redux": "^8.0.5",
