--- a/fit_tracker/frontend/package.json
+++ b/fit_tracker/frontend/package.json
@@ -14,9 +14,11 @@
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-multi-date-picker": "^4.0.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
