--- a/fit_tracker/frontend/package.json
+++ b/fit_tracker/frontend/package.json
@@ -20,7 +20,8 @@
     "react-multi-date-picker": "^4.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
